[gd_scene load_steps=3 format=3 uid="uid://blnvwoutudek0"]

[ext_resource type="Script" uid="uid://bilttgupth3wm" path="res://scripts/UIManager.gd" id="1_x4jx1"]
[ext_resource type="PackedScene" uid="uid://btilb0ar6fpjr" path="res://scenes/building_list_item.tscn" id="2_x4jx1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_x4jx1")

[node name="BuildingMenu" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildingMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BuildingsList" type="VBoxContainer" parent="BuildingMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ListItem" parent="BuildingMenu/MarginContainer/BuildingsList" instance=ExtResource("2_x4jx1")]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
text = "1000G"
horizontal_alignment = 2
